--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src=";/script.js"></script>
+		<script src="./script.js"></script>
 		<title>Rock Paper Scissors</title>
 	</head>
 	<body>
