--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="./script.js"></script>
+		<script src="./script.js" defer></script>
 		<title>Rock Paper Scissors</title>
 	</head>
 	<body>
-
+		<div id='buttons'>
+			<button id='rock'>Rock</button>
+			<button id='paper'>Paper</button>
+			<button id='scissors'>Scissors</button>
+		</div>
+		<div id='results'>
+			
+		</div>
 	</body>
 </html>
